package com.smartqueue.observer;

public class TokenObserver {
  
}
